fixed blurry distracting navbar in test page
the logo was removed since otherwise it looks weird

--- a/code/frontend/dynamic-mcq/mcq-form-2.css
+++ b/code/frontend/dynamic-mcq/mcq-form-2.css
@@ -19,8 +19,8 @@ body {
     width: 100%;
     height: max-content;
     margin: auto;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px); */
     position:sticky; 
     border: none;
     top: 0px;
